--- a/_themes/mattsoria/sass/pages/_about.scss
+++ b/_themes/mattsoria/sass/pages/_about.scss
@@ -30,11 +30,21 @@
     h2 {
       margin: 0;
       font-size: $huge;
-      text-align: center;
-      @include text-shadow(0 0 8px rgba(0,0,0,0.60));
+      text-align: left;
+      @include text-shadow(1px 1px 1px $black);
     }
   }
-  .main_section {
+  .status_section {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    background-color: $black;
+    h3 {
+      text-align: left;
+      font-size: $small;
+      margin-top: 0.25rem;
+    }
+  }
+  .main_section, .facts_section {
     h3, h4, h5, h6 {
       color: $black;
       margin-bottom: 1rem;
@@ -52,6 +62,17 @@
           color: inherit;
           font-weight: $bold;
         }
+      }
+    }
+  }
+  .whatido_section {
+    background: $noise;
+    background-color: $base;
+    p {
+      color: $dark;
+      a {
+        color: $black;
+        font-weight: $bold;
       }
     }
   }
