--- a/_themes/mattsoria/sass/components/_header.scss
+++ b/_themes/mattsoria/sass/components/_header.scss
@@ -67,9 +67,27 @@
     .nav_wrapper {
       z-index: 10;
       width: 100%;
+      padding-top: 0;
+      padding-bottom: 0;
       background: $black;
       background-image: $noise;
       @include box-shadow(0 2px $rgba);
+    }
+    .main_nav {
+      ul {
+        li {
+          a {
+            &:after {
+              @include translateY(6px);
+            }
+            &:hover, &:active, &:focus, &.current {
+              &:after {
+                @include translateY(-4px);
+              }
+            }
+          }
+        }
+      }
     }
     .section_nav {
       ul {
@@ -90,7 +108,7 @@
       padding: 0;
       position: relative;
       @include clearfix();
-      margin: 0.75rem 0.5rem 0 0;
+      margin: 0.4rem 0.5rem 0 0;
       li {
         list-style: none;
         display: inline-block;
