--- a/_themes/mattsoria/templates/home.html
+++ b/_themes/mattsoria/templates/home.html
@@ -1,6 +1,6 @@
 <section class="section intro">
   <div class="global_wrapper">
-    <div class="animated fadeInDownBig">{{ content }}</div>
+    <h2 class="animated fadeInDownBig">Web Dood, Illustrationist, <span contenteditable>Happy</span> Person.</h2>
   </div>
 </section>
 <section class="section recent_work">
