Changing the color of social links in footer

--- a/_themes/mattsoria/sass/components/_footer.scss
+++ b/_themes/mattsoria/sass/components/_footer.scss
@@ -33,7 +33,7 @@
         width: 16.666666667%;
         display: inline-block;
         a {
-          color: $dark;
+          color: $light;
           font-size: $med;
           position: relative;
           display: inline-block;
