Fixing twitter link error

--- a/_themes/mattsoria/templates/about.html
+++ b/_themes/mattsoria/templates/about.html
@@ -35,7 +35,7 @@
 </section>
 <section class="section twitter_section">
   <div class="global_wrapper">
-    <h2><a href="http://www.tiwtter.com/poopsplat">@poopsplat</a><span class="sub_header">what I'm saying on twitter</span></h2>
+    <h2><a href="http://www.twitter.com/poopsplat">@poopsplat</a><span class="sub_header">what I'm saying on twitter</span></h2>
     <div id="twitter_feed"></div>
   </div>
 </section>
