Pushing some new content to work page, a lot of overall style tweaks, fixes to work page grid, adjustments to work project pages

--- a/_themes/mattsoria/sass/components/_forms.scss
+++ b/_themes/mattsoria/sass/components/_forms.scss
@@ -19,11 +19,13 @@ form {
     margin-top: 1rem;
     background: $light;
     border: 3px solid $dark;
+    -webkit-appearance: none;
     @include box-shadow(1px 1px $rgba);
     &:first-child {
       margin-top: 0;
     }
     &:hover, &:focus, &:active {
+      outline: none;
       border-color: $highlight;
     }
   }
