--- a/_themes/mattsoria/sass/pages/_project.scss
+++ b/_themes/mattsoria/sass/pages/_project.scss
@@ -49,36 +49,42 @@
       .featured_image {
         text-align: center;
         margin-bottom: 1rem;
+        img {
+          margin-bottom: 0;
+        }
       }
-      .project_details {
-        .project_features {
-          width: 100%;
-          padding: 1rem;
-          margin: 0 0 1rem;
+      .project_features {
+        font-size: $small;
+        padding: 1rem 4rem;
+        @include clearfix();
+        margin: 0 0 1rem -4rem;
+        background: $lightGray;
+        width: calc(100% + 8rem);
+        h3 {
+          float: left;
+          color: $black;
           font-size: $small;
-          @include clearfix();
-          h3 {
-            float: left;
-            display: inline;
-            font-size: $small;
-          }
-          ul {
-            display: inline;
-          }
-          li {
-            float: left;
-            color: $dark;
-            padding: 0 1rem;
-            display: inline-block;
-            border-left: 1px solid $rgba;
-            &:first-of-type {
-              padding-left: 0;
-              border-left: none;
-            }
+          font-weight: $bold;
+          margin-right: 1rem;
+          display: inline-block;
+        }
+        ul {
+          display: inline;
+        }
+        li {
+          float: left;
+          color: $dark;
+          padding: 0 1rem 0 0;
+          display: inline-block;
+          &:first-of-type {
+            padding-left: 0;
+            border-left: none;
           }
         }
+      }
+      .project_details {
         h3 {
-          color: $dark;
+          color: $black;
           text-align: left;
           font-weight: $bold;
           margin-bottom: 1rem;
