--- a/_themes/mattsoria/templates/project.html
+++ b/_themes/mattsoria/templates/project.html
@@ -1,44 +1,48 @@
 <div class="work project">
   <section class="section main_section">
-    <div class="global_wrapper">
-      <article class="grid">
+    <article class="grid">
+      <div class="global_wrapper">
         <h2>{{ title }} {{ if siteurl }}<a class="visit_site" href="{{ siteurl }}">visit site<i class="icon-arrow-right"></i></a>{{ endif }}<span class="sub_header">{{ categories_list }} | {{ year }}</span></h2>
-          <div class="featured_image">
-            <span data-picture data-alt="{{ title }} - {{ categories_list }}">
-              <span data-src="{{ smallimage }}"></span>
-              <span data-src="{{ smallimage2x }}" data-media="(min-device-pixel-ratio: 2.0)"></span>
-              <span data-src="{{ medimage }}" data-media="(min-width: 600px)"></span>
-              <span data-src="{{ medimage2x }}" data-media="(min-width: 600px) and (min-device-pixel-ratio: 2.0)"></span>
-              <span data-src="{{ largeimage }}" data-media="(min-width: 800px)"></span>
-              <span data-src="{{ largeimage2x }}" data-media="(min-width: 800px) and (min-device-pixel-ratio: 2.0)"></span>
-              <noscript>
-                  <img src="{{ smallimage }}" alt="{{ title }} - {{ categories_list }}">
-              </noscript>
-            </span>
+        <div class="featured_image">
+          <span data-picture data-alt="{{ title }} - {{ categories_list }}">
+            <span data-src="{{ smallimage }}"></span>
+            <span data-src="{{ smallimage2x }}" data-media="(min-device-pixel-ratio: 2.0)"></span>
+            <span data-src="{{ medimage }}" data-media="(min-width: 600px)"></span>
+            <span data-src="{{ medimage2x }}" data-media="(min-width: 600px) and (min-device-pixel-ratio: 2.0)"></span>
+            <span data-src="{{ largeimage }}" data-media="(min-width: 800px)"></span>
+            <span data-src="{{ largeimage2x }}" data-media="(min-width: 800px) and (min-device-pixel-ratio: 2.0)"></span>
+            <noscript>
+                <img src="{{ smallimage }}" alt="{{ title }} - {{ categories_list }}">
+            </noscript>
+          </span>
+        </div>
+      </div>
+      {{ if features }}
+        <div class="project_features">
+          <div class="global_wrapper">
+            <h3>technologies:</h3>
+            {{ features }}
           </div>
-          <div class="project_details">
-            <div class="grid">
-              <div class="grid_item one-half-left">
-                <h3>about</h3>
-                {{ about }}
-              </div>
-              <div class="grid_item one-half-right">
-                <h3>my role</h3>
-                {{ role }}
-              </div>          
+        </div>
+      {{ endif }}
+      <div class="global_wrapper">
+        <div class="project_details">
+          <div class="grid">
+            <div class="grid_item one-half-left">
+              <h3>about</h3>
+              {{ about }}
             </div>
-<!--             {{ if features }}
-              <div class="project_features">
-                <h3>technologies:</h3>
-                {{ features }}
-              </div>
-            {{ endif }} -->
+            <div class="grid_item one-half-right">
+              <h3>my role</h3>
+              {{ role }}
+            </div>          
           </div>
-          <div class="project_screenshots">
-            {{ content }}
-          </div>
-      </article>
-    </div>
+        </div>
+        <div class="project_screenshots">
+          {{ content }}
+        </div>
+      </div>
+    </article>
   </section>
   <section class="section recent_work">
     <div class="global_wrapper">
@@ -47,7 +51,7 @@
         {{ entries:listing folder="work" limit="3" }}
           <a href="{{ url }}" class="recent_work__item one-third-left">
             <div class="recent_work__screenshot">
-              <img src="{{ image }}" alt="{{ title }} {{ categories_list }}">
+              <img src="{{ thumbnail }}" alt="{{ title }} {{ categories_list }}">
             </div>
             <div class="project_label">
               <h3>{{ title }}</h3>
