--- a/_themes/mattsoria/templates/work.html
+++ b/_themes/mattsoria/templates/work.html
@@ -1,8 +1,7 @@
 <section class="section">
   <div class="global_wrapper">
     <ul class="og-grid grid">
-      {{ entries:listing folder="work" }}
-        <li class="grid_item">
+      {{ entries:listing folder="work" }}<li class="grid_item">
           <a href="{{ url }}" data-largesrc="{{ largethumbnail }}" data-title="{{ title }}" data-category="{{ categories_list }}" data-description="{{ description }}">
             <img src="{{ thumbnail }}" alt="{{ title }}" />
           </a>
@@ -10,8 +9,7 @@
             <h2>{{ title }}</h2>
             <h3 class="sub_header">{{ categories_list }}</h3>
           </div>
-        </li>
-      {{ /entries:listing }}
+        </li>{{ /entries:listing }}
     </ul>
   </div>
 </section>
