Removing outline on h1 when active

--- a/_themes/mattsoria/sass/components/_header.scss
+++ b/_themes/mattsoria/sass/components/_header.scss
@@ -11,6 +11,11 @@
     font-family: $mmm;
     margin: 0 0 1rem 0;
     font-weight: $regular;
+    a {
+      &:active {
+        outline: none;
+      }
+    }
     .mmmatt-a {
       margin-right: -0.5rem;
     }
