Adding gotcha field to contact form to filter out spam better (fingers crossed)

--- a/_themes/mattsoria/partials/contact.html
+++ b/_themes/mattsoria/partials/contact.html
@@ -31,16 +31,16 @@
 {{ raven:form formset="contact" }}
   <div class="js-float-label-wrapper">
     <label for="name">name</label>
-    <input id="name" name="name" type="text" aria-required="true" />
+    <input id="name" name="name" type="text" aria-required="true">
   </div>
   <div class="js-float-label-wrapper">
     <label for="email">email</label>
-    <input id="email" name="email" type="email" aria-required="true" />
+    <input id="email" name="email" type="email" aria-required="true">
   </div>
   <div class="js-float-label-wrapper">
     <label for="message">what would you like to say?</label>
     <textarea id="message" name="message" rows="4" aria-required="true"></textarea>
   </div>
-  <input type="text" name="Gotcha" style="display:none;" />
+  <input type="text" name="address" style="display:none;" value="{{ value:address }}">
   <input type="submit" value="send" class="btn submit" />
 {{ /raven:form }}
